--- a/.env.local
+++ b/.env.local
@@ -18,3 +18,4 @@ NEXT_PUBLIC_MESSAGING_SENDER_ID=988765592086
 NEXT_PUBLIC_APP_ID=1:988765592086:web:33cd0e43fb2337f2a6f337
 
 NEXT_PUBLIC_TINY_EDITOR_KEY=4neeo9e330yet6ek6ma6rbb8xh289fgjltqq9pnoulm94s6b
+NEXT_PUBLIC_GOOGLE_API_KEY=AIzaSyCZuyC1v2Yjl0CV2khWJ7V8vgUBJQFOEoE
