--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.11",
+    "@react-google-maps/api": "^2.18.1",
     "@reduxjs/toolkit": "^1.9.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/line-clamp": "^0.4.2",
@@ -35,6 +36,7 @@
     "emoji-picker-react": "^4.4.7",
     "firebase": "^9.19.1",
     "framer-motion": "^8.0.2",
+    "google-map-react": "^2.2.1",
     "http-proxy": "^1.18.1",
     "jodit-react": "^1.3.39",
     "jwt-encode": "^1.0.1",
@@ -51,6 +53,7 @@
     "react-draggable": "^4.4.5",
     "react-hook-form": "^7.43.5",
     "react-hot-toast": "^2.4.0",
+    "react-image-magnify": "^2.7.4",
     "react-indiana-drag-scroll": "^3.0.3-alpha",
     "react-infinite-scroll-component": "^6.1.0",
     "react-linkify": "^1.0.0-alpha",
@@ -90,12 +93,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/cookies": "^0.7.7",
+    "@types/google-map-react": "^2.1.7",
     "@types/http-proxy": "^1.17.9",
     "@types/jest": "^29.2.4",
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.15",
     "@types/react": "^18.0.26",
     "@types/react-date-range": "^1.4.4",
+    "@types/react-image-magnify": "^2.7.1",
     "@types/react-linkify": "^1.0.1",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
