--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-messenger-customer-chat": "^0.8.0",
     "react-otp-input": "^3.0.0",
     "react-paginate": "^8.1.4",
+    "react-player": "^2.12.0",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
     "react-responsive": "^9.0.2",
