--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,8 @@
 NEXT_PUBLIC_API_URL=https://hpgroup.satavan.vn
 NEXT_PUBLIC_IMAGE_DOMAIN_URL=hpgroup.satavan.vn
-NEXT_PUBLIC_DOMAIN_URL=https://haophat.com
-# NEXT_PUBLIC_DOMAIN_URL=http://localhost:3000
+NEXT_PUBLIC_IMAGE_DOMAIN_URL_2=ik.imagekit.io
+# NEXT_PUBLIC_DOMAIN_URL=https://haophat.com
+NEXT_PUBLIC_DOMAIN_URL=http://localhost:3000
 
 NEXT_PUBLIC_CHAT_API_URL=https://tintuchpgroup.satavan.vn
 NEXT_PUBLIC_SECRET_KEY=encodeUserIDForChatService
