--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
     "react-responsive": "^9.0.2",
+    "react-reveal": "^1.2.2",
     "react-select": "^5.7.2",
     "react-share": "^4.4.1",
     "react-switch": "^7.0.0",
