--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tinymce/tinymce-react": "^4.3.0",
+    "antd": "^5.8.6",
     "axios": "^1.2.1",
     "body-parser": "^1.20.1",
     "classnames": "^2.3.2",
